All entity identifiers now use a uuid string.
The entities have been annotated with the following hibernate provided generator
  @GeneratedValue(generator = "system-uuid")
  @GenericGenerator(name = "system-uuid", strategy = "uuid.hex")

This changes the storage datatype of the id column for all the entities.

Certificate serial numbers will remain numbers so that they are compliant with
the x509 specification.